--- a/1-drum-kit/index.html
+++ b/1-drum-kit/index.html
@@ -7,15 +7,15 @@
   <body>
   <img src="images/bg.jpg" alt="background" class="bg">
   <div id="buttons-wrapper">
-    <button>A<span>CLAP</span></button>
-    <button>S<span>CLAP</span></button>
-    <button>D<span>CLAP</span></button>
-    <button>F<span>CLAP</span></button>
-    <button>G<span>CLAP</span></button>
-    <button>H<span>CLAP</span></button>
-    <button>J<span>CLAP</span></button>
-    <button>K<span>CLAP</span></button>
-    <button>L<span>CLAP</span></button>
+    <button>A<span>BUBBLES</span></button>
+    <button>S<span>CLAY</span></button>
+    <button>D<span>CONFETTI</span></button>
+    <button>F<span>CORONA</span></button>
+    <button>G<span>FLASH</span></button>
+    <button>H<span>GLIMMER</span></button>
+    <button>J<span>MOON</span></button>
+    <button>K<span>PINWHEEL</span></button>
+    <button>L<span>SPLITS</span></button>
   </div>
   <script src="script.js"></script>
   </body>
